--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,8 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit",
-    },
+      "source.fixAll.eslint": "explicit"
+    }
   },
-  "prettier.requireConfig": true,
+  "prettier.requireConfig": true
 }
