--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,3 +1,25 @@
 {
-  extends: ["@fisker", ":assignee(fisker)"],
+  $schema: "https://docs.renovatebot.com/renovate-schema.json",
+  dependencyDashboardApproval: true,
+  postUpdateOptions: ["yarnDedupeHighest"],
+  packageRules: [
+    {
+      groupName: "devDependencies",
+      matchDepTypes: ["devDependencies"],
+    },
+    {
+      groupName: "dependencies",
+      matchDepTypes: ["dependencies"],
+      rangeStrategy: "replace",
+    },
+    {
+      groupName: "peerDependencies",
+      matchDepTypes: ["peerDependencies"],
+      rangeStrategy: "widen",
+    },
+    {
+      groupName: "GitHub Actions",
+      matchManagers: ["github-actions"],
+    },
+  ],
 }
