--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "package-dependencies-tree",
   "version": "0.0.0",
-"description": "Get package dependencies tree",
+  "description": "Get package dependencies tree",
   "homepage": "https://github.com/fisker/package-dependencies-tree#readme",
   "bugs": {
     "url": "https://github.com/fisker/package-dependencies-tree/issues"
@@ -56,6 +56,7 @@
     "@fisker/markdownlint-cli2-config": "0.1.0",
     "@fisker/prettier-config": "5.3.0",
     "@types/node": "25.0.3",
+    "c8": "10.1.3",
     "del-cli": "7.0.0",
     "eslint": "9.39.2",
     "husky": "9.1.7",
@@ -64,6 +65,7 @@
     "nano-spawn": "^2.0.0",
     "npm-run-all2": "8.0.4",
     "prettier": "3.7.4",
+    "release-it": "19.2.3",
     "sort-package-json": "3.6.0",
     "tsd": "0.33.0",
     "typescript": "5.9.3"
