--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -43,6 +43,7 @@ jobs:
 
       - name: Install Fixtures
         run: |
+          echo "">yarn.lock
           yarn
           git diff
         env:
