--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Install Fixtures
         run: |
-          yarn --update-lockfile
+          yarn install --refresh-lockfile
           git diff
         env:
           YARN_ENABLE_IMMUTABLE_INSTALLS: false
