--- a/fixtures/package.json
+++ b/fixtures/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "local-package": "file:./local-package",
+    "local-package": "file:local-package/package-dependencies-tree-local-package-1.0.0.tgz",
     "search-closest": "<=1.1.0"
   },
   "devDependencies": {
