--- a/fixtures/local-package/package.json
+++ b/fixtures/local-package/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "peerDependencies": {
-    "@std/path": "*"
-  }
+    "search-closest": "*"
+  },
+  "files": []
 }
